--- a/anchor_tic_tac_toe/Anchor.toml
+++ b/anchor_tic_tac_toe/Anchor.toml
@@ -2,7 +2,7 @@
 seeds = false
 skip-lint = false
 [programs.localnet]
-anchor_hello_world = "7oZAwjFYYAohXSfpkNDrSZmEZi4TJxz5fRutmaB7Ss8H"
+anchor_tic_tac_toe = "Fg6PaFpoGXkYsidMpWTK6W2BeZ7FEfcYkg476zPFsLnS"
 
 [registry]
 url = "https://api.apr.dev"
